// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rehypeCodeblockCopy > should add a copy button to code blocks 1`] = `
"{
  "type": "root",
  "children": [
    {
      "type": "element",
      "tagName": "h1",
      "properties": {},
      "children": [
        {
          "type": "text",
          "value": "ABC"
        }
      ]
    },
    {
      "type": "text",
      "value": "\\n"
    },
    {
      "type": "element",
      "tagName": "pre",
      "properties": {
        "class": [
          "copy-code-pre"
        ]
      },
      "children": [
        {
          "type": "element",
          "tagName": "code",
          "properties": {
            "className": [
              "language-ts"
            ]
          },
          "children": [
            {
              "type": "text",
              "value": "console.log(\\"Hello, world!\\");\\n"
            }
          ]
        },
        {
          "type": "element",
          "tagName": "copy-button",
          "properties": {},
          "children": []
        }
      ]
    }
  ]
}"
`;

exports[`rehypeCodeblockCopy > should not add button to non-code blocks 1`] = `
"{
  "type": "root",
  "children": [
    {
      "type": "element",
      "tagName": "h1",
      "properties": {},
      "children": [
        {
          "type": "text",
          "value": "abc"
        }
      ]
    },
    {
      "type": "text",
      "value": "\\n"
    },
    {
      "type": "element",
      "tagName": "p",
      "properties": {},
      "children": [
        {
          "type": "text",
          "value": "a "
        },
        {
          "type": "element",
          "tagName": "code",
          "properties": {},
          "children": [
            {
              "type": "text",
              "value": "inline"
            }
          ]
        },
        {
          "type": "text",
          "value": " code block"
        }
      ]
    }
  ]
}"
`;

exports[`rehypeCodeblockCopy > should work with shiki 1`] = `
"{
  "type": "root",
  "children": [
    {
      "type": "root",
      "children": [
        {
          "type": "element",
          "tagName": "pre",
          "properties": {
            "class": "shiki catppuccin-macchiato copy-code-pre",
            "style": "background-color:#24273a;color:#cad3f5",
            "tabindex": "0"
          },
          "children": [
            {
              "type": "element",
              "tagName": "code",
              "properties": {},
              "children": [
                {
                  "type": "element",
                  "tagName": "span",
                  "properties": {
                    "class": "line"
                  },
                  "children": [
                    {
                      "type": "element",
                      "tagName": "span",
                      "properties": {
                        "style": "color:#CAD3F5"
                      },
                      "children": [
                        {
                          "type": "text",
                          "value": "console"
                        }
                      ]
                    },
                    {
                      "type": "element",
                      "tagName": "span",
                      "properties": {
                        "style": "color:#8BD5CA"
                      },
                      "children": [
                        {
                          "type": "text",
                          "value": "."
                        }
                      ]
                    },
                    {
                      "type": "element",
                      "tagName": "span",
                      "properties": {
                        "style": "color:#8AADF4;font-style:italic"
                      },
                      "children": [
                        {
                          "type": "text",
                          "value": "log"
                        }
                      ]
                    },
                    {
                      "type": "element",
                      "tagName": "span",
                      "properties": {
                        "style": "color:#CAD3F5"
                      },
                      "children": [
                        {
                          "type": "text",
                          "value": "("
                        }
                      ]
                    },
                    {
                      "type": "element",
                      "tagName": "span",
                      "properties": {
                        "style": "color:#A6DA95"
                      },
                      "children": [
                        {
                          "type": "text",
                          "value": "\\"Hello, world!\\""
                        }
                      ]
                    },
                    {
                      "type": "element",
                      "tagName": "span",
                      "properties": {
                        "style": "color:#CAD3F5"
                      },
                      "children": [
                        {
                          "type": "text",
                          "value": ")"
                        }
                      ]
                    },
                    {
                      "type": "element",
                      "tagName": "span",
                      "properties": {
                        "style": "color:#939AB7"
                      },
                      "children": [
                        {
                          "type": "text",
                          "value": ";"
                        }
                      ]
                    }
                  ]
                },
                {
                  "type": "text",
                  "value": "\\n"
                },
                {
                  "type": "element",
                  "tagName": "span",
                  "properties": {
                    "class": "line"
                  },
                  "children": [
                    {
                      "type": "element",
                      "tagName": "span",
                      "properties": {
                        "style": "color:#939AB7;font-style:italic"
                      },
                      "children": [
                        {
                          "type": "text",
                          "value": "// comment"
                        }
                      ]
                    }
                  ]
                }
              ]
            },
            {
              "type": "element",
              "tagName": "copy-button",
              "properties": {},
              "children": []
            }
          ]
        }
      ]
    }
  ]
}"
`;
